# text_tagger

./: .gitignore  GOAL.md  IMPLEMENTATION_DIFFERENCES_EXPLAINED.md  README.md  SIMPLIFICATION_SUMMARY.md  TASK.md  app.py  feedback_manager.py  main.py  pyproject.toml  requirements.txt  test_features.py  test_features_simplified.py  test_multilang.py  test_simplified.py  test_yake_simple.py
.github/workflows/: ci.yaml
cli/: __init__.py  extract.py  tag.py  train.py  utils.py
data/: feedback.csv
documents/: test_cli.txt
ml/: __init__.py  config.py  predict.py  train.py
ml/models/: rf_model_20251021_225908.pkl  rf_model_20251022_013330.pkl  rf_model_20251022_195654.pkl  rf_model_20251024_031611.pkl  rf_model_20251024_031636.pkl  rf_model_20251024_031637.pkl  rf_model_20251024_032434.pkl  rf_model_20251024_033627.pkl  rf_model_20251024_041713.pkl  rf_model_20251024_042019.pkl  rf_model_20251024_042659.pkl
ml/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_model_evaluation.ipynb
rag/: README.md  demo.ipynb
rag/chroma_db/: chroma.sqlite3
rag/demo_documents/: auth_guide.txt  ml_guide.txt
tests/: __init__.py  test_feedback.py  test_ml.py  test_yake.py
yake/: FEATURE_INSPECTION.md  README.md  __init__.py  extractor.py  feature_extractor.py  scorer.py  utils.py
yake/core/: Levenshtein.py  yake.py
yake/data/: __init__.py  composed_word.py  core.py  single_word.py  utils.py
