[tool.poetry]
name = "intelligent-text-tagger"
version = "0.1.0"
description = "YAKE-based keyword extraction system"
authors = ["stavan_sanyal"]
readme = "README.md"
packages = [{include = "yake"}]

[tool.poetry.dependencies]
python = "^3.11.13"
networkx = "^2.5"
numpy = "^1.19.0"
segtok = "^1.5.11"
jellyfish = "^0.9.0"
streamlit = "^1.28.0"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
pandas = "^2.0.0"
seaborn = "^0.12.0"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
